observing mqtt data on chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<google-chart [title]="'Hello'" [type]="'LineChart'" [data]="d"></google-chart>
+<google-chart
+  [title]="'Hello'"
+  [type]="'LineChart'"
+  [data]="d"
+  [columnNames]="['Date', 'Data', 'Median', 'Mean', 'Exp Smooth']"
+  [height]="600"
+  [width]="800"
+></google-chart>
