gut800 settings are introduced

--- a/src/app/components/line-chart/line-chart.component.html
+++ b/src/app/components/line-chart/line-chart.component.html
@@ -1,4 +1,15 @@
-<ngx-charts-line-chart [results]="data" [gradient]="true" [xAxis]="true" [yAxis]="true" [legend]="true"
-  [showXAxisLabel]="true" [showYAxisLabel]="true" xAxisLabel="Time" [yAxisLabel]="name" [autoScale]="true"
-  [timeline]="false" [animations]="false">
+<ngx-charts-line-chart
+  [results]="data"
+  [gradient]="true"
+  [xAxis]="true"
+  [yAxis]="true"
+  [legend]="true"
+  [showXAxisLabel]="true"
+  [showYAxisLabel]="true"
+  xAxisLabel="Time"
+  [yAxisLabel]="name"
+  [autoScale]="true"
+  [timeline]="false"
+  [animations]="false"
+>
 </ngx-charts-line-chart>
