--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,52 +6,180 @@
           <mat-panel-title>
             MQTT Settings
           </mat-panel-title>
-
         </mat-expansion-panel-header>
-        <div [formGroup]="formGroup">
+        <div [formGroup]="mqttSettingsForm">
           <mat-form-field>
-            <input matInput type="text" placeholder="Device" [formControl]="deviceId">
+            <input
+              matInput
+              type="text"
+              placeholder="Device"
+              [formControl]="deviceId"
+            />
           </mat-form-field>
           <mat-form-field>
-            <input matInput type="text" placeholder="MQTT Server" [formControl]="server">
+            <input
+              matInput
+              type="text"
+              placeholder="MQTT Server"
+              [formControl]="server"
+            />
           </mat-form-field>
           <mat-form-field>
-            <input matInput type="number" placeholder="WSS Port" [formControl]="wssPort">
+            <input
+              matInput
+              type="number"
+              placeholder="WSS Port"
+              [formControl]="wssPort"
+            />
           </mat-form-field>
           <mat-form-field>
-            <input matInput type="text" placeholder="User" [formControl]="user">
+            <input
+              matInput
+              type="text"
+              placeholder="User"
+              [formControl]="user"
+            />
           </mat-form-field>
           <mat-form-field>
-            <input matInput type="password" placeholder="Password" [formControl]="mqttPwd">
+            <input
+              matInput
+              type="password"
+              placeholder="Password"
+              [formControl]="mqttPwd"
+            />
           </mat-form-field>
-          <!-- <mat-form-field>
-            <textarea matInput placeholder="MQTT Configuration" [formControl]="config"></textarea>
-          </mat-form-field> -->
-          <button mat-raised-button [matBadge]="isConnected?'v':'x'"
-            [matBadgeDescription]="isConnected?'Connected':'No Connection'"
-            [matBadgeColor]="isConnected?'primary':'warn'" (click)="reconnect()"
-            [disabled]="!!errors?.length">Connect</button>
+          <button
+            mat-raised-button
+            [matBadge]="isConnected ? 'v' : 'x'"
+            [matBadgeDescription]="isConnected ? 'Connected' : 'No Connection'"
+            [matBadgeColor]="isConnected ? 'primary' : 'warn'"
+            (click)="reconnect()"
+            [disabled]="!!mqttSettingsErrors?.length"
+          >
+            Connect
+          </button>
         </div>
-
       </mat-expansion-panel>
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
             Chart Settings
           </mat-panel-title>
-
         </mat-expansion-panel-header>
         <mat-form-field>
-          <input type="number" [(ngModel)]="samplesInFrame" matInput placeholder="Samples in Frame" value="Sushi">
+          <input
+            type="number"
+            [(ngModel)]="samplesInFrame"
+            matInput
+            placeholder="Samples in Frame"
+          />
         </mat-form-field>
+        <div>
+          <button mat-raised-button (click)="resetChart()">
+            Reset
+          </button>
+        </div>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            GUT800 Settings
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div [formGroup]="gut800SettingsForm">
+          <mat-form-field>
+            <input
+              matInput
+              type="number"
+              step=".001"
+              placeholder="Reference Depth, m"
+              [formControl]="referenceDepth"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <input
+              matInput
+              type="number"
+              step=".001"
+              placeholder="Zero Level Current, A"
+              [formControl]="minCurrent"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <input
+              matInput
+              type="number"
+              step=".001"
+              placeholder="Max Level Current, A"
+              [formControl]="maxCurrent"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <input
+              matInput
+              type="number"
+              step=".001"
+              placeholder="Resistance, Ohms"
+              [formControl]="r"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <input
+              matInput
+              type="number"
+              step=".001"
+              placeholder="Max Depth, m"
+              [formControl]="maxDepth"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <input
+              matInput
+              type="number"
+              step=".001"
+              placeholder="Voltage, V"
+              [formControl]="voltage"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <input
+              matInput
+              type="number"
+              step=".001"
+              placeholder="ADC Resoltion, bits"
+              [formControl]="resolution"
+            />
+          </mat-form-field>
+        </div>
+        <div>
+          <button
+            mat-raised-button
+            (click)="applyGut800Settings()"
+            [disabled]="!!gut800SettingsErrors?.length"
+          >
+            Apply
+          </button>
+        </div>
       </mat-expansion-panel>
     </mat-accordion>
   </mat-sidenav>
   <mat-sidenav-content>
-    <app-line-chart [data]="temperature$ | async" [name]="temperatureName"></app-line-chart>
+    <app-line-chart
+      [data]="temperature$ | async"
+      [name]="temperatureName"
+    ></app-line-chart>
     <app-line-chart [data]="depth$ | async" [name]="depthName"></app-line-chart>
-    <app-line-chart [data]="solarPower$ | async" [name]="solarPowerName"></app-line-chart>
-    <app-line-chart [data]="consumption$ | async" [name]="consumptionName"></app-line-chart>
-    <app-line-chart [data]="discharge$ | async" [name]="dischargeName"></app-line-chart>
+    <app-line-chart
+      [data]="solarPower$ | async"
+      [name]="solarPowerName"
+    ></app-line-chart>
+    <app-line-chart
+      [data]="consumption$ | async"
+      [name]="consumptionName"
+    ></app-line-chart>
+    <app-line-chart
+      [data]="discharge$ | async"
+      [name]="dischargeName"
+    ></app-line-chart>
   </mat-sidenav-content>
 </mat-sidenav-container>
