--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 html,
 body {
   height: 100%;
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
 .absolute {
@@ -17,4 +17,43 @@ body {
 
 .relative {
   position: relative;
+}
+
+.flex-container {
+  display: flex;
+
+  &.vertical {
+    flex-flow: column;
+    height: 100%;
+  }
+
+  &.justify-center {
+    justify-content: center;
+  }
+
+  &.align-items-center {
+    align-items: center;
+  }
+
+  &[hidden] {
+    display: none;
+  }
+
+  .content-block {
+    &.fixed {
+      flex: 0 0 auto;
+    }
+
+    &.flexible {
+      flex: 1 1 auto;
+    }
+
+    &.flexible-equal {
+      flex: 1 1 0px;
+    }
+
+    &.shrinkable {
+      flex: 0 1 auto;
+    }
+  }
 }
