manage mqtt connection functionality is introduced

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<router-outlet> </router-outlet>
+{{ healthCheck }}
 <mat-tab-group>
   <mat-tab label="Gauges">
     <mat-grid-list cols="2" rowHeight="1:1">
