mqtt configuration - start

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<router-outlet> </router-outlet>
-{{ healthCheck }}
+<app-loading-tracker>
+  <router-outlet> </router-outlet>
+  {{ healthCheck }}
+</app-loading-tracker>
 <mat-tab-group>
   <mat-tab label="Gauges">
     <mat-grid-list cols="2" rowHeight="1:1">
