--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,3 +65,16 @@ mat-form-field {
 textarea {
   height: 10em;
 }
+
+.holder-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+.overlay {
+  z-index: 20000;
+  background-color: #f0f8ff80;
+}
