--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,302 +1,10 @@
 <app-loading-tracker>
-  <router-outlet> </router-outlet>
-  {{ healthCheck }}
+  <div>
+    <button mat-raised-button [routerLink]="['/mqtt-connections']">
+      Select Another Device
+    </button>
+  </div>
+  <div>
+    <router-outlet> </router-outlet>
+  </div>
 </app-loading-tracker>
-<mat-tab-group>
-  <mat-tab label="Gauges">
-    <mat-grid-list cols="2" rowHeight="1:1">
-      <mat-grid-tile>
-        <ngx-charts-gauge
-          [results]="latestTemperature$ | async"
-          [min]="-30"
-          [max]="40"
-          units="C"
-        ></ngx-charts-gauge>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <ngx-charts-gauge
-          [results]="latestDepth$ | async"
-          [min]="0"
-          [max]="referenceDepth.value"
-          units="m"
-        ></ngx-charts-gauge
-      ></mat-grid-tile>
-      <mat-grid-tile>
-        <ngx-charts-gauge
-          [results]="latestSolarPower$ | async"
-          [min]="0"
-          [max]="4095"
-          units="arb. units"
-        ></ngx-charts-gauge>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <ngx-charts-gauge
-          [results]="latestConsuption$ | async"
-          [min]="0"
-          [max]="4095"
-          units="arb. units"
-        ></ngx-charts-gauge>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <ngx-charts-gauge
-          [results]="latestDischarge$ | async"
-          [min]="0"
-          [max]="25"
-          units="arb. units"
-        ></ngx-charts-gauge>
-      </mat-grid-tile>
-    </mat-grid-list>
-  </mat-tab>
-  <mat-tab label="Plots">
-    <mat-grid-list cols="1" rowHeight="3:1">
-      <mat-grid-tile>
-        <ngx-charts-line-chart
-          [results]="temperature$ | async"
-          [gradient]="true"
-          [xAxis]="true"
-          [yAxis]="true"
-          [showXAxisLabel]="true"
-          [showYAxisLabel]="true"
-          xAxisLabel="Time"
-          [yAxisLabel]="temperatureName + ', C'"
-          [autoScale]="true"
-          [timeline]="false"
-          [animations]="false"
-        >
-        </ngx-charts-line-chart>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <ngx-charts-line-chart
-          [results]="depth$ | async"
-          [gradient]="true"
-          [xAxis]="true"
-          [yAxis]="true"
-          [showXAxisLabel]="true"
-          [showYAxisLabel]="true"
-          xAxisLabel="Time"
-          [yAxisLabel]="depthName + ', m'"
-          [autoScale]="true"
-          [timeline]="false"
-          [animations]="false"
-        >
-        </ngx-charts-line-chart>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <ngx-charts-line-chart
-          [results]="solarPower$ | async"
-          [gradient]="true"
-          [xAxis]="true"
-          [yAxis]="true"
-          [showXAxisLabel]="true"
-          [showYAxisLabel]="true"
-          xAxisLabel="Time"
-          [yAxisLabel]="solarPowerName"
-          [autoScale]="true"
-          [timeline]="false"
-          [animations]="false"
-        >
-        </ngx-charts-line-chart>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <ngx-charts-line-chart
-          [results]="consumption$ | async"
-          [gradient]="true"
-          [xAxis]="true"
-          [yAxis]="true"
-          [showXAxisLabel]="true"
-          [showYAxisLabel]="true"
-          xAxisLabel="Time"
-          [yAxisLabel]="consumptionName"
-          [autoScale]="true"
-          [timeline]="false"
-          [animations]="false"
-        >
-        </ngx-charts-line-chart>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <ngx-charts-line-chart
-          [results]="discharge$ | async"
-          [gradient]="true"
-          [xAxis]="true"
-          [yAxis]="true"
-          [showXAxisLabel]="true"
-          [showYAxisLabel]="true"
-          xAxisLabel="Time"
-          [yAxisLabel]="dischargeName"
-          [autoScale]="true"
-          [timeline]="false"
-          [animations]="false"
-        >
-        </ngx-charts-line-chart>
-      </mat-grid-tile>
-    </mat-grid-list>
-  </mat-tab>
-  <mat-tab label="Settings">
-    <mat-accordion>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            MQTT Settings
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <div [formGroup]="mqttSettingsForm">
-          <mat-form-field>
-            <input
-              matInput
-              type="text"
-              placeholder="Device"
-              [formControl]="deviceId"
-            />
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              type="text"
-              placeholder="MQTT Server"
-              [formControl]="server"
-            />
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              type="number"
-              placeholder="WSS Port"
-              [formControl]="wssPort"
-            />
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              type="text"
-              placeholder="User"
-              [formControl]="user"
-            />
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              type="password"
-              placeholder="Password"
-              [formControl]="mqttPwd"
-            />
-          </mat-form-field>
-          <div>
-            <button
-              mat-raised-button
-              [matBadge]="isConnected ? 'v' : 'x'"
-              [matBadgeDescription]="
-                isConnected ? 'Connected' : 'No Connection'
-              "
-              [matBadgeColor]="isConnected ? 'primary' : 'warn'"
-              (click)="reconnect()"
-              [disabled]="!!mqttSettingsErrors?.length"
-            >
-              Connect
-            </button>
-          </div>
-        </div>
-      </mat-expansion-panel>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            Chart Settings
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-form-field>
-          <input
-            type="number"
-            [(ngModel)]="samplesInFrame"
-            matInput
-            placeholder="Samples in Frame"
-          />
-        </mat-form-field>
-        <div>
-          <button mat-raised-button (click)="resetChart()">
-            Reset
-          </button>
-        </div>
-      </mat-expansion-panel>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            GUT800 Settings
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <div [formGroup]="gut800SettingsForm">
-          <mat-form-field>
-            <input
-              matInput
-              type="number"
-              step=".001"
-              placeholder="Reference Depth, m"
-              [formControl]="referenceDepth"
-            />
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              type="number"
-              step=".001"
-              placeholder="Zero Level Current, A"
-              [formControl]="minCurrent"
-            />
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              type="number"
-              step=".001"
-              placeholder="Max Level Current, A"
-              [formControl]="maxCurrent"
-            />
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              type="number"
-              step=".001"
-              placeholder="Resistance, Ohms"
-              [formControl]="r"
-            />
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              type="number"
-              step=".001"
-              placeholder="Max Depth, m"
-              [formControl]="maxDepth"
-            />
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              type="number"
-              step=".001"
-              placeholder="Voltage, V"
-              [formControl]="voltage"
-            />
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              matInput
-              type="number"
-              step=".001"
-              placeholder="ADC Resoltion, bits"
-              [formControl]="resolution"
-            />
-          </mat-form-field>
-        </div>
-        <div>
-          <button
-            mat-raised-button
-            (click)="applyGut800Settings()"
-            [disabled]="!!gut800SettingsErrors?.length"
-          >
-            Apply
-          </button>
-        </div>
-      </mat-expansion-panel>
-    </mat-accordion>
-  </mat-tab>
-</mat-tab-group>
