fixed loading first time + device state is introduced

--- a/src/app/components/mqtt-device/mqtt-device.component.html
+++ b/src/app/components/mqtt-device/mqtt-device.component.html
@@ -3,6 +3,7 @@
   <button mat-raised-button [routerLink]="['/mqtt-connections']">
     Select Another Device
   </button>
+  {{ deviceState$ | async }}
 </h1>
 <mat-tab-group>
   <mat-tab label="Gauges">
